--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 #build generate dir
 dist/
 build/
+DataFlowPackages/
 
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
